kubernetes/Mongo/mongo-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  namespace: mongo-db
spec:
  replicas: 1
  serviceName: mongo-svc
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      nodeSelector: 
        module: database
      containers:
      - name: mongodb
        image: mongo
        ports:
        - containerPort: 27017
        readinessProbe:
          tcpSocket:
            port: 27017
          initialDelaySeconds: 15
          periodSeconds: 10
        livenessProbe:
          exec:
            command:
            - mongo 
            - --eval 
            - db.adminCommand('ping')
          initialDelaySeconds: 30
          periodSeconds: 30
        resources:
          requests:
            memory: "2Gi"
            cpu: "1000m"
          limits:
            memory: "4Gi"
            cpu: "1500m"
        volumeMounts:
          - name: mongodb-data
            mountPath: /data/db
      volumes:
        - name: mongodb-data
          persistentVolumeClaim:
            claimName: ebs-claim


# apiVersion: apps/v1
# kind: Statefulset
# metadata:
#   name: mongodb-deployment
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: mongodb
#   template:
#     metadata:
#       labels:
#         app: mongodb
#     spec:
#       containers:
#       - name: mongodb
#         image: mongo
#         ports:
#         - containerPort: 27017
#         readinessProbe:
#           tcpSocket:
#             port: 27017
#           initialDelaySeconds: 15
#           periodSeconds: 10
#         livenessProbe:
#           exec:
#             command:
#             - mongo
#             - --eval
#             - db.adminCommand('ping')
#           initialDelaySeconds: 30
#           periodSeconds: 30
#         env:
#         - name: MONGO_INITDB_ROOT_USERNAME
#           value: admin
#         - name: MONGO_INITDB_ROOT_PASSWORD
#           value: admin
